--- a/sass/global/_mixins.scss
+++ b/sass/global/_mixins.scss
@@ -1,19 +1,27 @@
 @mixin respond($breakpoint) {
-    @if $breakpoint == xs {
-        @media only screen and (max-width: 380px) { @content }; 
+
+
+
+
+    @if $breakpoint == xl {
+        @media only screen and (max-width: 1920px) { @content };
     }
-    @if $breakpoint == sm {
-        @media only screen and (max-width: 576px) { @content }; 
+
+    @if $breakpoint == lg {
+        @media only screen and (max-width: 1536px) { @content };  
     }
     @if $breakpoint == md {
         @media only screen and (max-width: 768px) { @content };  
     }
-    @if $breakpoint == lg {
-        @media only screen and (max-width: 1536px) { @content };  
+
+    @if $breakpoint == sm {
+        @media only screen and (max-width: 576px) { @content }; 
     }
-    @if $breakpoint == xl {
-        @media only screen and (max-width: 1920px) { @content };
+
+    @if $breakpoint == xs {
+        @media only screen and (max-width: 340px) { @content }; 
     }
+
 }
 
 
